@@ -9,6 +9,7 @@ snapshot available from [https://oss.sonatype.org/content/repositories/snapshots
 
 __ztemplates-3.0.0-SNAPSHOT (Not yet released)__ 
 
+* added support for List<ZIForm> in forms, added initForm(int size) method to support dynamic forms (see FormWithListTest).
 * modified ZProperty, ZSelectProperty and ZFormSelect to use ZIFormatter and ZIMarshaller
 * added ZIMarshaller and ZIFormatter and diverse implementations for modular and reusable Properties  
 * change ZIFormAction no longer has a type parameter 
